finsihed product through sprint 2

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/tgaff/tunely#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.13.3",
-    "mongoose": "^4.7.1"
+    "mongoose": "^4.7.1",
+    "request": "^2.79.0"
   }
 }
